syntax = "proto3";

option csharp_namespace = "ClientNew";

service SendReference {

  rpc GetReferenceInfo (ReferenceRequest) returns (ReferenceReply);
}

//Request by the client
message ReferenceRequest {
  int32 RequestedReference = 1;
}

//Reply from the client
message ReferenceReply {
	int32 ID = 1;
	int32 Reference = 2;
	string Name = 3;
}